# ros_localization

./: CMakeLists.txt  package.xml  readme.md
apps/: initializer.py
arduino/apc220/: apc220.ino
conf/: cameras_info.yaml  usb_0_intrinsic.xml
include/: usbCamera.hpp  videoCap.hpp  video_ucam_Cap.hpp
include/ros_vl/: common_utility.hpp  usbCamera.hpp
launch/: camera_usb_0.launch  camera_video_0.launch  initialize.launch
msg/: pose.msg
scripts/: install.sh
src/: common_utility.cpp  visual_localization.cpp
